# Ai_SDK

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.trellis/: .gitignore
.trellis/spec/backend/: agent-contracts.md  database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md  sdk-contracts.md  trace-contracts.md
.trellis/spec/guides/: code-reuse-thinking-guide.md  cross-layer-thinking-guide.md  index.md
.trellis/tasks/00-bootstrap-guidelines/: prd.md  task.json
.trellis/tasks/07-13-deepseek-tool-call/: prd.md  task.json
.trellis/tasks/07-13-readme-cross-platform-build/: implement.jsonl  prd.md  task.json
.trellis/tasks/07-14-mcp-client/: check.jsonl  implement.jsonl  info.md  prd.md  task.json  verification.md
.trellis/tasks/07-14-mcp-client/research/: mcp-protocol-and-cpp-options.md
.trellis/tasks/07-14-trace-support/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/07-14-trace-support/research/: trace-context-api.md
.trellis/tasks/07-15-lightweight-agent/: prd.md  task.json
.trellis/tasks/07-15-lightweight-agent/research/: filesystem-tools.md  react-mvp.md
.trellis/tasks/archive/2026-07/07-13-deepseek-tool-call/: task.json
.trellis/tasks/archive/2026-07/07-13-readme-cross-platform-build/: task.json
.trellis/tasks/archive/2026-07/07-14-trace-support/: prd.md  task.json
.trellis/tasks/archive/2026-07/07-15-lightweight-agent/: task.json
.trellis/tasks/archive/2026-07/07-16-streaming-agent-tool-calls/: prd.md  task.json
.trellis/tasks/archive/2026-07/07-16-workspace-search-tools/: prd.md  task.json
ChatServer/: CMakeLists.txt  ChatServer.conf  ChatServer.conf.in  ChatServer.cpp  ChatServer.h  main.cpp
ChatServer/web/: index.html
ChatServer/web/css/: style.css
ChatServer/web/js/: app.js
docs/: PRD.md  跨平台构建方案.md
examples/: CMakeLists.txt
examples/01_chat_deepseek/: CMakeLists.txt  main.cpp
examples/02_chat_minimax/: CMakeLists.txt
examples/03_stream_chat/: CMakeLists.txt  main.cpp
examples/04_register_tool/: CMakeLists.txt  main.cpp
examples/05_tool_call/: CMakeLists.txt  main.cpp
examples/06_simple_agent/: CMakeLists.txt  main.cpp
examples/07_trace/: CMakeLists.txt  main.cpp
examples/08_mcp_tool_call/: CMakeLists.txt  main.cpp
include/: AIClient.h
include/agent/: SimpleAgent.h  WorkspaceFileTools.h
include/core/: ChatRequest.h  ChatResponse.h  Config.h  Error.h  Message.h  Result.h
include/http/: HttpClient.h  SSEParser.h
include/mcp/: IMCPTransport.h  MCPClient.h  MCPServerConfig.h  MCPToolAdapter.h  MCPTypes.h
include/provider/: DeepSeekProvider.h  IModelProvider.h  MiniMaxProvider.h
include/tool/: Tool.h  ToolCall.h  ToolExecutor.h  ToolRegistry.h  ToolSchema.h
include/trace/: Trace.h  TraceRecorder.h
sdk/include/: ChatGPTProvider.h  ChatSDK.h  DataManager.h  DeepSeekProvider.h  GeminiProvider.h  LLMManager.h  LLMProvider.h  LocalLLMProvider.h  SessionManager.h  common.h
sdk/include/util/: Log.h
sdk/src/: ChatGPTProvider.cpp  ChatSDK.cpp  DataManager.cpp  DeepSeekProvider.cpp  GeminiProvider.cpp  LLMManager.cpp  LLMProvider.cpp  LocalLLMProvider.cpp  SessionManager.cpp
sdk/src/util/: Log.cpp
src/: AIClient.cpp
src/agent/: SimpleAgent.cpp  WorkspaceFileTools.cpp
src/core/: ChatRequest.cpp  ChatResponse.cpp  Config.cpp  Message.cpp
src/http/: HttpClient.cpp  SSEParser.cpp
src/mcp/: MCPClient.cpp  MCPProtocol.cpp  MCPServerConfig.cpp  MCPToolAdapter.cpp  MCPTypes.cpp  StdioMCPTransport.cpp  StreamableHttpMCPTransport.cpp
src/mcp/detail/: MCPDeadline.h  MCPHttpTestFactory.h  MCPProtocol.h  MCPSseDecoder.cpp  MCPSseDecoder.h  MCPText.h  MCPToolCatalogAccess.h  MCPTransportFactory.h  Process.h
src/mcp/process/: PosixProcess.cpp  WindowsProcess.cpp
src/provider/: DeepSeekProvider.cpp
src/tool/: Tool.cpp  ToolExecutor.cpp  ToolRegistry.cpp
src/trace/: Trace.cpp  TraceRecorder.cpp
test/: CMakeLists.txt  main.cpp
test/testSQLite/: Makefile  main.cpp
tests/: CMakeLists.txt
tests/agent/: CMakeLists.txt  simple_agent_test.cpp  workspace_file_tools_test.cpp
tests/core/: CMakeLists.txt  chat_request_test.cpp  chat_response_test.cpp  config_test.cpp  message_test.cpp
tests/http/: CMakeLists.txt  sse_parser_test.cpp
tests/mcp/: CMakeLists.txt  mcp_adapter_test.cpp  mcp_client_test.cpp  mcp_http_integration_test.cpp  mcp_protocol_test.cpp  mcp_sse_decoder_test.cpp  mcp_stdio_integration_test.cpp  mcp_types_config_test.cpp
tests/mcp/helpers/: McpTlsTestCertificates.h  McpTlsTestServer.h  PosixMcpTlsTestServer.cpp  WindowsMcpTlsTestServer.cpp  mcp_stdio_fixture.cpp
tests/provider/: CMakeLists.txt  deepseek_provider_test.cpp
tests/smoke/: ai_sdk_smoke_test.cpp
tests/tool/: CMakeLists.txt  tool_executor_test.cpp  tool_registry_test.cpp
tests/trace/: CMakeLists.txt  trace_integration_test.cpp  trace_recorder_test.cpp
